--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/AddressEditor.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/AddressEditor.cshtml
@@ -33,111 +33,111 @@
     </div>
 }
 @*This should generally be put in a form*@
-    <div class="address-editor" id="@guid">
-        <div class="address-input">
-            @Html.HiddenFor(m => m.AddressType)
-            <h4>@(Model.AddressType == AddressRecordType.ShippingAddress ? T("Shipping Address") : T("Billing Address"))</h4>
-        </div>
-        @* Personal information *@
-        @EditorForString(m => m.Honorific,
-            T("Title"),
-            T("Title or honorific, e.g. Mr., Mrs., Dr., San, etc."))
-        @EditorForString(m => m.FirstName,
-            T("First Name"),
-            T("Please include middle name or initial as appropriate."),
-            true)
-        @EditorForString(m => m.LastName,
-            T("Last Name"),
-            T("Please include middle name or initial as appropriate."),
-            true)
-        @EditorForString(m => m.Company,
-            T("Company"))
-        @* 1. Country *@
-        @*    This must be selected among the countries configured *@
-        <div class="address-input address-text-input address-country">
-            @Html.LabelFor(m => m.CountryId, T("Country").Text, new { @class = "required address-input" })
-            @Html.DropDownListFor(m => m.CountryId,
-                Model.AddressType == AddressRecordType.ShippingAddress
-                    ? Model.ShippingCountries
-                    : Model.BillingCountries)
+<div class="address-editor" id="@guid">
+    <div class="address-input">
+        @Html.HiddenFor(m => m.AddressType)
+        <h4>@(Model.AddressType == AddressRecordType.ShippingAddress ? T("Shipping Address") : T("Billing Address"))</h4>
+    </div>
+    @* Personal information *@
+    @EditorForString(m => m.Honorific,
+        T("Title"),
+        T("Title or honorific, e.g. Mr., Mrs., Dr., San, etc."))
+    @EditorForString(m => m.FirstName,
+        T("First Name"),
+        T("Please include middle name or initial as appropriate."),
+        true)
+    @EditorForString(m => m.LastName,
+        T("Last Name"),
+        T("Please include middle name or initial as appropriate."),
+        true)
+    @EditorForString(m => m.Company,
+        T("Company"))
+    @* 1. Country *@
+    @*    This must be selected among the countries configured *@
+    <div class="address-input address-text-input address-country">
+        @Html.LabelFor(m => m.CountryId, T("Country").Text, new { @class = "required address-input" })
+        @Html.DropDownListFor(m => m.CountryId,
+            Model.AddressType == AddressRecordType.ShippingAddress
+                ? Model.ShippingCountries
+                : Model.BillingCountries)
 
-            <div class="hint">@T("Select a valid country from the list.")</div>
-        </div>
-        @* 2. City *@
-        <div class="address-input address-text-input address-city">
-            @Html.LabelFor(m => m.City, T("City").Text, new { @class = "required" })
-            @Html.HiddenFor(m => m.CityId)
-            <select id="CitySelectedId"
-                    class="address-input"
-                    name="CitySelectedId"
-                    data-requiredfield="@Html.FieldIdFor(m=>m.CityId)">
-                @if (Model.CityId > 0) {
-                    <option value="@Model.CityId" selected="selected">@Model.City</option>
-                }
-            </select>
-            <input type="text" id="@Html.FieldIdFor(m => m.City)"
-                   placeholder="@T("City")"
-                   class="required address-input"
-                   name="@Html.NameFor(m => m.City)"
-                   value="@Model.City" />
-            <div class="hint">@T("Select a city from the list.")</div>
-        </div>
-        @* 3. Province and ZIP code *@
-        <div class="address-input address-text-input address-province">
-            @Html.LabelFor(m => m.Province, T("State, province, prefecture, republic or region").Text, new { @class = "required" })
-            @Html.HiddenFor(m => m.ProvinceId)
-            <select id="ProvinceSelectedId"
-                    class="address-input"
-                    name="ProvinceSelectedId"
-                    data-requiredfield="@Html.FieldIdFor(m=>m.Province)">
-                @if (Model.ProvinceId > 0) {
-                    <option value="@Model.ProvinceId" selected="selected">@Model.Province</option>
-                }
-            </select>
-            <input id="@Html.FieldIdFor(m => m.Province)"
-                   placeholder="@T("State, province, prefecture, republic or region")"
-                   class="required address-input" pattern="^[-a-zA-Z].{1,}"
-                   title="@T("Province, starting with a letter.")"
-                   name="@Html.NameFor(m => m.Province)" type="text"
-                   value="@Model.Province" />
-            <div class="hint">@T("Please specify the state, province, prefecture, republic or region code as appropriate. For example, 'WA' for the state of Washington in the United States.")</div>
-        </div>
-        @EditorForString(m => m.PostalCode,
-            T("Postal or ZIP code"))
-        @* 4. Street *@
-        <div class="address-input address-text-input">
-            @Html.LabelFor(m => m.Address1, T("Address").Text, new { @class = "required" })
-            @Html.EditorFor(m => m.Address1)
-            @Html.EditorFor(m => m.Address2)
-        </div>
+        <div class="hint">@T("Select a valid country from the list.")</div>
+    </div>
+    @* 2. City *@
+    <div class="address-input address-text-input address-city">
+        @Html.LabelFor(m => m.City, T("City").Text, new { @class = "required" })
+        @Html.HiddenFor(m => m.CityId)
+        <select id="CitySelectedId"
+                class="address-input"
+                name="CitySelectedId"
+                data-requiredfield="@Html.FieldIdFor(m=>m.CityId)">
+            @if (Model.CityId > 0) {
+                <option value="@Model.CityId" selected="selected">@Model.City</option>
+            }
+        </select>
+        <input type="text" id="@Html.FieldIdFor(m => m.City)"
+               placeholder="@T("City")"
+               class="required address-input"
+               name="@Html.NameFor(m => m.City)"
+               value="@Model.City" />
+        <div class="hint">@T("Select a city from the list.")</div>
+    </div>
+    @* 3. Province and ZIP code *@
+    <div class="address-input address-text-input address-province">
+        @Html.LabelFor(m => m.Province, T("State, province, prefecture, republic or region").Text, new { @class = "required" })
+        @Html.HiddenFor(m => m.ProvinceId)
+        <select id="ProvinceSelectedId"
+                class="address-input"
+                name="ProvinceSelectedId"
+                data-requiredfield="@Html.FieldIdFor(m=>m.Province)">
+            @if (Model.ProvinceId > 0) {
+                <option value="@Model.ProvinceId" selected="selected">@Model.Province</option>
+            }
+        </select>
+        <input id="@Html.FieldIdFor(m => m.Province)"
+               placeholder="@T("State, province, prefecture, republic or region")"
+               class="required address-input" pattern="^[-a-zA-Z].{1,}"
+               title="@T("Province, starting with a letter.")"
+               name="@Html.NameFor(m => m.Province)" type="text"
+               value="@Model.Province" />
+        <div class="hint">@T("Please specify the state, province, prefecture, republic or region code as appropriate. For example, 'WA' for the state of Washington in the United States.")</div>
+    </div>
+    @EditorForString(m => m.PostalCode,
+        T("Postal or ZIP code"))
+    @* 4. Street *@
+    <div class="address-input address-text-input">
+        @Html.LabelFor(m => m.Address1, T("Address").Text, new { @class = "required" })
+        @Html.EditorFor(m => m.Address1)
+        @Html.EditorFor(m => m.Address2)
+    </div>
 
 
-        @* 5. VAT Number and Fiscal code*@
-        @if (Model.AddressType == AddressRecordType.BillingAddress) {
-            var invoiceSettings = WorkContext.CurrentSite.As<EcommerceInvoiceSettingsPart>();
-            if (invoiceSettings != null && invoiceSettings.EnableInvoiceRequest) {
-                if (!invoiceSettings.InvoiceRequestForceChoice) {
-                    <div class="address-input invoice-request-input">
-                        @Html.LabelFor(m => m.InvoiceRequest, T("Request invoice by default").Text, new { @class = "for-checkbox" })
-                        @Html.EditorFor(m => m.InvoiceRequest)
-                    </div>
-                }
-                else {
-                    <input type="hidden" name="@Html.NameFor(m => m.InvoiceRequest)" id="@Html.IdFor(m=>m.InvoiceRequest)" value="@invoiceSettings.InvoiceRequestDefaultValue.ToString()" />
-                }
-                <div class="address-input fiscal-code-input">
-                    @Html.LabelFor(m => m.FiscalCode, T("Fiscal code"))
-                    @Html.EditorFor(m => m.FiscalCode)
-                    @Html.ValidationMessageFor(m => m.FiscalCode)
-                </div>
-                <div class="address-input vat-number-input">
-                    @Html.LabelFor(m => m.VATNumber, T("VAT number"))
-                    @Html.EditorFor(m => m.VATNumber)
-                    @Html.ValidationMessageFor(m => m.VATNumber)
+    @* 5. VAT Number and Fiscal code*@
+    @if (Model.AddressType == AddressRecordType.BillingAddress) {
+        var invoiceSettings = WorkContext.CurrentSite.As<EcommerceInvoiceSettingsPart>();
+        if (invoiceSettings != null && invoiceSettings.EnableInvoiceRequest) {
+            if (!invoiceSettings.InvoiceRequestForceChoice) {
+                <div class="address-input invoice-request-input">
+                    @Html.CheckBoxFor(m => m.InvoiceRequest)
+                    @Html.LabelFor(m => m.InvoiceRequest, T("Request invoice by default").Text, new { @class = "for-checkbox" })
                 </div>
             }
+            else {
+                <input type="hidden" name="@Html.NameFor(m => m.InvoiceRequest)" id="@Html.IdFor(m=>m.InvoiceRequest)" value="@invoiceSettings.InvoiceRequestDefaultValue.ToString()" />
+            }
+            <div class="address-input fiscal-code-input">
+                @Html.LabelFor(m => m.FiscalCode, T("Fiscal code"))
+                @Html.EditorFor(m => m.FiscalCode)
+                @Html.ValidationMessageFor(m => m.FiscalCode)
+            </div>
+            <div class="address-input vat-number-input">
+                @Html.LabelFor(m => m.VATNumber, T("VAT number"))
+                @Html.EditorFor(m => m.VATNumber)
+                @Html.ValidationMessageFor(m => m.VATNumber)
+            </div>
         }
-    </div>
+    }
+</div>
 @using (Script.Foot()) {
     <script type="text/javascript">
     $(document).ready(function () {
