Centralize CustomerType logic

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/AddressSummaryForm.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/AddressSummaryForm.cshtml
@@ -101,11 +101,11 @@
         @if (viewModel.BillingAddressVM.InvoiceRequest) {
         <div class="additional-address-invoice-info">
             <div class="invoice-info-request">@T("An invoice was requested for this order.")</div>
-            @if (!string.IsNullOrWhiteSpace(viewModel.BillingAddressVM.FiscalCode)) {
+            @if (viewModel.BillingAddressVM.CustomerType == Laser.Orchard.NwazetIntegration.CustomerTypeOptions.Individual && !string.IsNullOrWhiteSpace(viewModel.BillingAddressVM.FiscalCode)) {
                 <div class="invoice-info-fiscalcode-label">@T("Fiscal code")</div>
                 <div class="invoice-info-fiscalcode-value">@viewModel.BillingAddressVM.FiscalCode</div>
             }
-            @if (!string.IsNullOrWhiteSpace(viewModel.BillingAddressVM.VATNumber)) {
+            @if (viewModel.BillingAddressVM.CustomerType == Laser.Orchard.NwazetIntegration.CustomerTypeOptions.LegalEntity && !string.IsNullOrWhiteSpace(viewModel.BillingAddressVM.VATNumber)) {
                 <div class="invoice-info-fiscalcode-label">@T("VAT number")</div>
                 <div class="invoice-info-fiscalcode-value">@viewModel.BillingAddressVM.VATNumber</div>
             }
