--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.AdvancedAddress.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.AdvancedAddress.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@using Laser.Orchard.NwazetIntegration.Services.Invoice;
+@using Laser.Orchard.NwazetIntegration.Models;
+@using Orchard.ContentManagement;
+
 @model Laser.Orchard.NwazetIntegration.ViewModels.OrderAddressEditorViewModel
 @* This will display the advanced address and hide the "standard" one.
     To avoid changing the OrderPart, this view, its partials and the
@@ -13,6 +16,8 @@
 
     var shippingId = Html.Id("shipping-tab");
     var billingId = Html.Id("billing-tab");
+    IInvoiceService invoiceService;
+    WorkContext.TryResolve<IInvoiceService>(out invoiceService);
 }
 
 <div class="order-editor advanced-addresses col-md-12 nav-tabs-custom">
@@ -28,32 +33,70 @@
     <div class="tab-content">
         <div id="@shippingId" class="tab-pane active order-address-editor shipping-address col-md-12">
             @Html.EditorFor(m => m.ShippingAddressVM,
-                new {
-                    OtherElementSelector = ".order-editor .addresses fieldset.shipping-address",
-                    OtherPrefix = "NwazetCommerceOrder"
-                })
+         new {
+             OtherElementSelector = ".order-editor .addresses fieldset.shipping-address",
+             OtherPrefix = "NwazetCommerceOrder"
+         })
         </div>
 
         <div id="@billingId" class="tab-pane order-address-editor billing-address col-md-12">
             @Html.EditorFor(m => m.BillingAddressVM,
-                new {
-                    OtherElementSelector = ".order-editor .addresses fieldset.billing-address",
-                    OtherPrefix = "NwazetCommerceOrder"
-                })
+         new {
+             OtherElementSelector = ".order-editor .addresses fieldset.billing-address",
+             OtherPrefix = "NwazetCommerceOrder"
+         })
         </div>
     </div>
 </div>
-@if (Model.AddressOrderPart.BillingInvoiceRequest) {
-    <div class="order-editor advanced-addresses invoice-info">
-        <div class="invoice-info-request alert alert-info">@T("An invoice was requested for this order.")</div>
-        <div class="invoice-info-invoicerequest-value">
-            @Html.EditorFor(m => m.BillingAddressVM.InvoiceRequest)
-            @Html.LabelFor(m => m.BillingAddressVM.InvoiceRequest, T("Invoice request").Text, new { @class = "forcheckbox" })
+@{
+    var invoiceSettings = WorkContext.CurrentSite.As<EcommerceInvoiceSettingsPart>();
+    if (invoiceSettings != null && invoiceSettings.EnableInvoiceRequest) {
+        <div class="order-editor advanced-addresses invoice-info">
+            @if (Model.BillingAddressVM.InvoiceRequest) {
+                <div class="invoice-info-request alert alert-info">@T("An invoice was requested for this order.")</div>
+            }
+            <div class="invoice-info-invoicerequest">
+                @Html.EditorFor(m => m.BillingAddressVM.InvoiceRequest)
+                @Html.LabelFor(m => m.BillingAddressVM.InvoiceRequest, T("Invoice request").Text, new { @class = "forcheckbox" })
+            </div>
+            <div class="invoice-info-customertype">
+                @Html.LabelFor(m => m.BillingAddressVM.CustomerType, T("Customer Type"))
+                @Html.DropDownListFor(m => m.BillingAddressVM.CustomerType, invoiceService.BuildCustomerOptions(Model.BillingAddressVM.CustomerType))
+            </div>
+            <div class="invoice-info-fiscalcode">
+                @Html.LabelFor(m => m.BillingAddressVM.FiscalCode, T("Fiscal code"))
+                @Html.EditorFor(m => m.BillingAddressVM.FiscalCode)
+            </div>
+            <div class="invoice-info-vatnumber">
+                @Html.LabelFor(m => m.BillingAddressVM.VATNumber, T("VAT number"))
+                @Html.EditorFor(m => m.BillingAddressVM.VATNumber)
+            </div>
         </div>
-        <div class="invoice-info-fiscalcode-label">@Html.LabelFor(m => m.BillingAddressVM.FiscalCode, T("Fiscal code"))</div>
-        <div class="invoice-info-fiscalcode-value">@Html.EditorFor(m => m.BillingAddressVM.FiscalCode)</div>
-        <div class="invoice-info-vatnumber-label">@Html.LabelFor(m => m.BillingAddressVM.VATNumber, T("VAT number"))</div>
-        <div class="invoice-info-vatnumber-value">@Html.EditorFor(m => m.BillingAddressVM.VATNumber)</div>
-    </div>
-}
+    }
+    else if (Model.BillingAddressVM.InvoiceRequest) {
+        <div class="order-editor advanced-addresses invoice-info">
+            <div class="invoice-info-request alert alert-info">@T("An invoice was requested for this order.")</div>
+            <div class="invoice-info-customertype">
+                <label>
+                    @T("Customer Type")
+                </label>
+                @{
+                    @invoiceService.BuildCustomerOptions(Model.BillingAddressVM.CustomerType).Where(x => x.Selected).Select(x => x.Text);
+                }
+            </div>
+            <div class="invoice-info-fiscalcode">
+                <label>
+                    @T("Fiscal code")
+                </label>
+                @Model.BillingAddressVM.FiscalCode
+            </div>
+            <div class="invoice-info-vatnumber">
+                <label>
+                    @T("VAT number")
+                </label>
+                @Model.BillingAddressVM.VATNumber
+            </div>
+        </div>
 
+    }
+}
