views and styles

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
@@ -83,7 +83,11 @@
         }
     }
 }
+
 .advanced-addresses {
+    & .invoice-info {
+        margin: 1em;
+    }
 
     .order-address-editor, .admin-address-editor {
 
