--- a/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
@@ -36,6 +36,9 @@
     .territories-list .single-territory .territory-info .territory-children-counts .single-count {
       display: inline-block; }
 
+.advanced-addresses .invoice-info {
+  margin: 1em; }
+
 .advanced-addresses .order-address-editor .address-editor .address-input, .advanced-addresses .admin-address-editor .address-editor .address-input {
   display: inline-block; }
   .advanced-addresses .order-address-editor .address-editor .address-input .row, .advanced-addresses .admin-address-editor .address-editor .address-input .row {
