--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -7547,6 +7547,7 @@ li.dropdown-progress .progress {
 .nav-tabs-custom .tab-content {
     margin-top: 0;
     padding: 0;
+    display: grid;
 }
 
 .nav-tabs-custom .tab-content > .tab-pane {
