--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/FacebookShopSiteSettings.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/FacebookShopSiteSettings.cshtml
@@ -16,6 +16,10 @@
         @Html.TextAreaFor(m => m.DefaultJsonForProductUpdate, new { @class = "text medium tokenized", rows = "20" })
         <span class="hint">@T("This is the json body for product creation / update on Facebook shop.")</span>
         <span class="hint">@T("This value will be used when no specific json is set in the FacebookProductPart of the product content definition.")</span>
+        <span class="hint">@T("If value is empty it will be generated based on product data.")</span>
+        <span class="hint">@T("If value is a constant it will be used as is.")</span>
+        <span class="hint">@T("If value is a token it will be computed as a token.")</span>
+      
     </div>
 </fieldset>
 <fieldset>
