--- a/src/Modules/Laser.Orchard.TenantBridges/Views/Parts/RemoteTenantContentSnippetWidget.Html.cshtml
+++ b/src/Modules/Laser.Orchard.TenantBridges/Views/Parts/RemoteTenantContentSnippetWidget.Html.cshtml
@@ -1,4 +1,4 @@
-﻿<!--Laser.Orchard.TenantBridges\Vews\Parts\RemoteTenantContentSnippetWidget.Html.cshtml-->
+﻿<!--Laser.Orchard.TenantBridges\Views\Parts\RemoteTenantContentSnippetWidget.Html.cshtml-->
 @using Laser.Orchard.TenantBridges.ViewModels
 @{ 
     var viewModel = (RemoteTenantContentSnippetWidgetPartHtmlDisplayViewModel)
