added null check in culture picker

--- a/src/Modules/Laser.Orchard.CulturePicker/Views/Parts/CulturePicker.cshtml
+++ b/src/Modules/Laser.Orchard.CulturePicker/Views/Parts/CulturePicker.cshtml
@@ -11,7 +11,9 @@
             availableCultureswithNames.Add(new KeyValuePair<string, string>(culture.CultureCode, disaplyedName));
         }
         catch {
-            availableCultureswithNames.Add(new KeyValuePair<string, string>(culture.CultureCode, culture.CultureCode));
+            if (culture != null) {
+                availableCultureswithNames.Add(new KeyValuePair<string, string>(culture.CultureCode, culture.CultureCode));
+            }
         }
     }
 }
