More verbose logging in case of Paypal payment errors.

--- a/src/Modules/Laser.Orchard.PayPal/Views/PayPal/Index.cshtml
+++ b/src/Modules/Laser.Orchard.PayPal/Views/PayPal/Index.cshtml
@@ -162,8 +162,7 @@
                                 }
                             });
                         });
-                    }
-                    ,
+                    },
                     onClick: function (data, actions) {
                         if (data.fundingSource == "paypal") {
                             $("#div-warning").css("display", "block");
@@ -188,7 +187,8 @@
                             url: "@Html.Raw(Model.TenantBaseUrl)/Laser.Orchard.PayPal/PayPal/ErrorPay",
                             data: {
                                 __RequestVerificationToken: '@Html.AntiForgeryTokenValueOrchard()',
-                                pId: '@Model.Record.Id'
+                                pId: '@Model.Record.Id',
+                                error: err
                             },
                             success: function (data) {
                                 PaymentResult();
