Added post to ErrorPay action when payment capture fails for Paypal.

--- a/src/Modules/Laser.Orchard.PayPal/Views/PayPal/Index.cshtml
+++ b/src/Modules/Laser.Orchard.PayPal/Views/PayPal/Index.cshtml
@@ -158,7 +158,19 @@
                                     PaymentResult(data);
                                 },
                                 error: function (data) {
-                                    PaymentResult(data);
+                                    //PaymentResult(data);
+                                    $.ajax({
+                                        type: 'POST',
+                                        url: "@Html.Raw(Model.TenantBaseUrl)/Laser.Orchard.PayPal/PayPal/ErrorPay",
+                                        data: {
+                                            __RequestVerificationToken: '@Html.AntiForgeryTokenValueOrchard()',
+                                            pId: '@Model.Record.Id',
+                                            error: data
+                                        },
+                                        success: function (resp) {
+                                            PaymentResult();
+                                        }
+                                    });
                                 }
                             });
                         });
