--- a/src/Modules/Contrib.Reviews/Styles/Contrib.Stars.css
+++ b/src/Modules/Contrib.Reviews/Styles/Contrib.Stars.css
@@ -174,6 +174,7 @@ ul.stars-details li:first-child {
 /* Reviews */
 div.reviews-content header {
     clear: both;
+    display: block;
 }
 div.reviews-content header > div {
     background-color: #eee;
